--- a/style.css
+++ b/style.css
@@ -36,29 +36,33 @@ body {
   display: none;
 }
 /* text items */
-h1{
-    font-weight: 700;
+h1 {
+  font-weight: 700;
 }
 .qs-a {
   text-decoration: none;
   color: hsl(292, 42%, 14%);
   font-weight: 600;
 }
-.qs-a:hover{
-    color: rgb(163,52,217);
+.qs-a:hover {
+  color: rgb(163, 52, 217);
 }
-.acc-a p{
-    color: hsl(292, 16%, 49%);
-    font-weight: 400;
+.acc-a p {
+  color: hsl(292, 16%, 49%);
+  font-weight: 400;
 }
 /*responsiveness*/
 @media screen and (max-width: 600px) {
-    .comp{
-        width: 90%;
-    }
+  body {
+    align-items: center;
+    height: 140vh;
+  }
+  .comp {
+    width: 90%;
+  }
 }
-@media screen and (max-width: 1200px) and (min-width:600px) {
-    .comp{
-        width: 70%;
-    }
+@media screen and (max-width: 1200px) and (min-width: 600px) {
+  .comp {
+    width: 70%;
+  }
 }
